overlays/kimawesome/applications/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
spec:
  parentRefs:
    - name: https-gateway
      namespace: kube-system
      sectionName: https-wildcard
  hostnames:
    - "gitea.kim.tec.br"
  rules:
    - name: root
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
